--- a/FinalProjectExample/src/index.css
+++ b/FinalProjectExample/src/index.css
@@ -6,7 +6,39 @@ html {
 body {
     /*Cover whole site*/
     margin: 0;
-    font-family: Helvetica;
+    font-family: Helvetica, serif;
+}
+
+/*--------------------------------------------------------------*/
+
+/*NavBar on each Site*/
+.SiteMenu {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    left: 56vw;
+    top: 18vh;
+    height: 4vh;
+    width: 35vw;
+    padding: 1.5vw;
+}
+    .siteMenuLi {
+    font-size: 1vw;
+    font-weight: bold;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    padding-bottom: 0.5vh;
+    text-transform: uppercase;
+    border-bottom: 3px solid green;
+}
+        .siteMenuLi a {
+    text-decoration: none;
+    color: green;
+}
+            .active1, .siteMenuLi:hover {
+    border-bottom: 3px solid lightgreen;
+    color: lightgreen;
 }
 
 /*--------------------------------------------------------------*/
@@ -93,7 +125,7 @@ header {
     left: 10vw;
     font-size: 2.2vw;
     font-weight: bolder;
-    font-family: "Bodoni 72";
+    font-family: "Bodoni 72", serif;
     letter-spacing: .7px;
     text-transform: uppercase;
     color: white;
@@ -103,10 +135,9 @@ header {
         top: 79vh;
         left: 40vw;
         font-weight: bold;
-        font: icon;
         color: white;
         text-transform: uppercase;
-        font-family: "Bodoni 72";
+        font-family: "Bodoni 72", serif;
         letter-spacing: .7px;
     }
 
@@ -118,51 +149,15 @@ header {
     display: flex;
     flex-direction: row;
 }
-#appSite {
-    height: 100vh;
-    width: 300vw;
-    display: flex;
-    flex-direction: row;
-    background-color: lightskyblue;
-}
 
-#challengeSite1, #challengeSite2, #challengeSite3 {
+        #challengeSite1, #challengeSite2, #challengeSite3 {
     height: 100vh;
     width: 100vw;
+
 }
 
-
-    /*NavBar Site*/
-            .SiteMenu {
-                list-style-type: none;
-                display: flex;
-                flex-direction: row;
-                position: relative;
-                left: 56vw;
-                top: 18vh;
-                height: 4vh;
-                width: 35vw;
-                padding: 1.5vw;
-            }
-                .siteMenuLi {
-                    font-size: 1vw;
-                    font-weight: bold;
-                    padding-left: 2vw;
-                    padding-right: 2vw;
-                    padding-bottom: 0.5vh;
-                    text-transform: uppercase;
-                    border-bottom: 3px solid green;
-                }
-                .siteMenuLi a {
-                    text-decoration: none;
-                    color: green;
-                }
-                    .active1, .siteMenuLi:hover {
-                        border-bottom: 3px solid lightgreen;
-                        color: lightgreen;
-                    }
-
-
+/*******************/
+/*SITE 1*/
     /*Tree Image*/
     .challengeSiteTreePic {
         position: absolute;
@@ -172,18 +167,19 @@ header {
         width: 35vw;
         float: right;
         border-radius: 25px;
-        box-shadow: 12px 29px 81px 8px rgba(22,40, 50,0.75);
+        box-shadow: 12px 29px 81px 10px rgba(15, 127, 18,0.75);
     }
 
         /*Textbox*/
         .infoTextChallenge {
             position: relative;
-            top: 37vh;
+            top: 43vh;
             left: 5vw;
             height: 40vh;
             width: 42vw;
             display: inline-block;
             padding: 2vw;
+            color: green;
         }
             /*Headline*/
             .infoTextHeadline {
@@ -197,29 +193,50 @@ header {
                 /*InfoText*/
                 .infoText {
                     letter-spacing: 1px;
-                    line-height: 2vw;
+                    line-height: 2.2vw;
                     font-size: 1.3vw;
 
                 }
 
-
-    /*CHALLENGE SITE 2*/
-    #challengeSite2 {
-        height: 100vh;
-        width: 100vw;
+/*******************/
+/*SITE 2*/
+    /*Info-text*/
+    .challengeSite2Description {
         position: relative;
-        background-color: orange;
+        display: inline-block;
+        top: 3vh;
+        left: 3vw;
+        height: 40vh;
+        width: 42vw;
+        padding: 2vw;
+        color: green;
     }
+        /*Headline*/
+        .site2DescHeadline {
+            font-weight: bolder;
+            font-size: 3vw;
+        }
+            /*Paragraf*/
+            .site2DescInfo {
+                line-height: 1.5vw;
+                letter-spacing: 1px;
+                font-size: 1.2vw;
+            }
 
+        /*Image Environment*/
+        .environmentImage {
+            position: absolute;
+            left: 65vw;
+            top: 24vh;
+            height: 50vh;
+            width: 20vw;
+            float: right;
+            border-radius: 25px;
+            box-shadow: 12px 29px 81px 10px rgba(15, 127, 18,0.75);
+        }
 
-    /*CHALLENGE SITE 3*/
-    #challengeSite3 {
-        height: 100vh;
-        width: 100vw;
-        position: relative;
-        background-color: indigo;
-    }
-
+/*******************/
+/*SITE 3*/
 /*--------------------------------------------------------------*/
 /*SOLUTION SITE*/
 #solutionSite {
@@ -227,7 +244,6 @@ header {
     width: 300vw;
     display: flex;
     flex-direction: row;
-    background-color: lightgrey;
 }
 
     #solutionSite1, #solutionSite2, #solutionSite3 {
